--- a/nombre_direccion.html
+++ b/nombre_direccion.html
@@ -96,7 +96,8 @@
       </div>
 
       <div class="mb-3">
-        <label for="imagen" class="form-label">Foto RTN"image/*">
+        <label for="imagen" class="form-label">Cargar Imagen:</label>
+        <input type="file" class="form-control" id="imagen" accept="image/*">
       </div>
 
       <button type="submit" class="btn btn-primary w-100">📤 Enviar</button>
