--- a/nombre_direccion.html
+++ b/nombre_direccion.html
@@ -96,7 +96,7 @@
       </div>
 
       <div class="mb-3">
-        <label for="imagen" class="form-label">Cargar Imagen:</label>
+        <label for="imagen" class="form-label">Foto Rtn:</label>
         <input type="file" class="form-control" id="imagen" accept="image/*">
       </div>
 
