--- a/nombre_direccion.html
+++ b/nombre_direccion.html
@@ -97,7 +97,7 @@
 
       <div class="mb-3">
         <label for="imagen" class="form-label">Foto Rtn:</label>
-        <input type="file" class="form-control" id="imagen" accept="image/*">
+        <input type="file" class="form-control" id="imagen" accept="image/*" capture="environment">
       </div>
 
       <button type="submit" class="btn btn-primary w-100">📤 Enviar</button>
