--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -301,7 +301,7 @@
             </div>
 
              <div class="mb-3">
-                <label for="foto" class="form-label">Subir Foto del Cliente:</label>
+                <label for="foto" class="form-label">Subir Foto RTN:</label>
                 <input type="file" class="form-control" id="foto" accept="image/jpeg"  >
                 <small id="foto-error" class="form-text text-danger">⚠️ Solo se permite archivos .jpg y hasta 10MB.</small>
             </div>
