--- a/Coordenadas.html
+++ b/Coordenadas.html
@@ -227,6 +227,9 @@
         <label for="latitud" class="form-label">Coordenadas (Latitud, Longitud):</label>
         <input type="text" class="form-control readonly" id="latitud" readonly>
       </div>
+<button onclick="window.location.href='MAPA_COORD.html'" class="btn btn-primary">
+  Ir al Mapa
+</button>
 
       <button type="button" class="btn btn-info w-100" onclick="obtenerCoordenadas()">📍 Obtener Coordenadas</button>
       <button type="button" class="btn btn-secondary w-100 mt-2" onclick="copiarCoordenadas()">📋 Copiar Coordenadas</button>
