--- a/MAPA_COORD.html
+++ b/MAPA_COORD.html
@@ -1,92 +1,159 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Seleccionar Ubicación</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Seleccionar Coordenadas</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
-    body { margin: 0; }
-    #map { height: 100vh; width: 100%; }
+    html, body {
+      margin: 0;
+      height: 100%;
+      font-family: 'Segoe UI', sans-serif;
+    }
 
-    .btn-flotante {
+    #map {
+      height: 100%;
+      width: 100%;
+    }
+
+    .coords-box {
       position: absolute;
       bottom: 20px;
       left: 20px;
-      z-index: 1000;
-      padding: 12px 20px;
-      font-size: 1rem;
-      border-radius: 10px;
+      background-color: rgba(255, 255, 255, 0.95);
+      padding: 10px 15px;
+      border-radius: 8px;
+      font-weight: bold;
+      font-size: 14px;
+      z-index: 999;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
 
-    .coordenadas-box {
+    .btn-insertar {
       position: absolute;
-      bottom: 90px;
+      bottom: 20px;
       right: 20px;
-      background: white;
-      padding: 10px 15px;
-      border-radius: 10px;
-      font-size: 0.9rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
       z-index: 999;
+      padding: 12px 20px;
+      background-color: #0d6efd;
+      color: white;
+      border: none;
+      border-radius: 30px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .btn-insertar:hover {
+      background-color: #0b5ed7;
+    }
+
+    .round-location {
+      background-color: #007bff;
+      border: 3px solid white;
+      border-radius: 50%;
+      width: 18px;
+      height: 18px;
+      display: block;
+    }
+
+    .notificacion {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #28a745;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      z-index: 1000;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      display: none;
+      opacity: 0;
+      transition: opacity 0.4s ease;
+    }
+
+    .notificacion.mostrar {
+      display: block;
+      opacity: 1;
     }
   </style>
 </head>
 <body>
-
   <div id="map"></div>
+  <div class="coords-box" id="coordsBox">📍 Coordenadas: No seleccionadas</div>
+  <button class="btn-insertar" onclick="aceptarCoordenadas()">Insertar coordenadas del cliente</button>
+  <div class="notificacion" id="notificacion">✅ Coordenadas insertadas con éxito</div>
 
-  <div class="coordenadas-box" id="coordenadasBox">Lat: — | Lng: —</div>
-
-  <button id="confirmarBtn" class="btn btn-primary btn-flotante" disabled>Aceptar ubicación</button>
-
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([14.072275, -87.192136], 13);
+    let selectedCoords = null;
+
+    const map = L.map('map').setView([14.1, -87.2], 13);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors',
-      maxZoom: 19
+      attribution: '© OpenStreetMap contributors',
+      maxZoom: 19,
     }).addTo(map);
-
-    let marcadorSeleccion = null;
-    let coordenadasSeleccionadas = null;
-
-    map.on('click', function (e) {
-      coordenadasSeleccionadas = e.latlng;
-
-      if (marcadorSeleccion) map.removeLayer(marcadorSeleccion);
-
-      marcadorSeleccion = L.marker(e.latlng).addTo(map);
-      document.getElementById('confirmarBtn').disabled = false;
-
-      document.getElementById('coordenadasBox').innerText =
-        `Lat: ${e.latlng.lat.toFixed(14)} | Lng: ${e.latlng.lng.toFixed(14)}`;
-    });
-
-    document.getElementById('confirmarBtn').addEventListener('click', function () {
-      if (coordenadasSeleccionadas) {
-        const formato = `${coordenadasSeleccionadas.lat}, ${coordenadasSeleccionadas.lng}`;
-        localStorage.setItem("coordenadasSeleccionadas", formato);
-        window.location.href = "Coordenadas.html";
-      }
-    });
 
     // Mostrar ubicación actual
     if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(function (pos) {
-        const latlng = [pos.coords.latitude, pos.coords.longitude];
-        L.circleMarker(latlng, {
-          radius: 8,
-          fillColor: "#007bff",
-          color: "#fff",
-          weight: 2,
-          opacity: 1,
-          fillOpacity: 0.9
-        }).addTo(map).bindPopup("Estás aquí").openPopup();
-        map.setView(latlng, 15);
+      navigator.geolocation.getCurrentPosition(pos => {
+        const lat = pos.coords.latitude;
+        const lon = pos.coords.longitude;
+
+        const userIcon = L.divIcon({
+          className: '',
+          html: '<span class="round-location"></span>',
+          iconSize: [18, 18],
+          iconAnchor: [9, 9]
+        });
+
+        L.marker([lat, lon], { icon: userIcon })
+          .addTo(map)
+          .bindPopup("📍 Mi ubicación actual")
+          .openPopup();
+
+        map.setView([lat, lon], 16);
       });
+    }
+
+    let marker = null;
+
+    map.on('click', function(e) {
+      const lat = e.latlng.lat.toFixed(6);
+      const lon = e.latlng.lng.toFixed(6);
+      selectedCoords = `${lat}, ${lon}`;
+      document.getElementById("coordsBox").innerText = `📍 Coordenadas: ${selectedCoords}`;
+
+      if (marker) {
+        marker.setLatLng(e.latlng);
+      } else {
+        marker = L.marker(e.latlng).addTo(map);
+      }
+    });
+
+    function aceptarCoordenadas() {
+      if (selectedCoords) {
+        sessionStorage.setItem('coordsSeleccionadas', selectedCoords);
+        mostrarNotificacion();
+        setTimeout(() => {
+          window.location.href = 'Coordenadas.html';
+        }, 2500);
+      } else {
+        alert("Debes seleccionar un punto en el mapa.");
+      }
+    }
+
+    function mostrarNotificacion() {
+      const noti = document.getElementById("notificacion");
+      noti.classList.add("mostrar");
+      setTimeout(() => {
+        noti.classList.remove("mostrar");
+      }, 2000);
     }
   </script>
 </body>
