--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -323,7 +323,9 @@ if (foto.size > 10 * 1024 * 1024 || !foto.name.endsWith('.jpg')) {
 
          
 
-            <button type="button" class="btn btn-success w-100 mt-2" onclick="MAPA_COORD.html">🗺️ Obtener desde Mapa</button>
+          <button onclick="window.location.href='MAPA_COORD.html'" class="btn btn-primary">
+  Ir al Mapa
+</button>
             <button type="button" class="btn btn-info w-100" onclick="obtenerCoordenadas()">📍 Obtener Coordenadas</button>
             <button type="submit" class="btn btn-primary w-100 mt-3">📤 Enviar</button>
             <button type="button" class="btn btn-warning w-100 mt-2" onclick="refrescarFormulario()">🔄 Refrescar</button>
