--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -323,7 +323,7 @@ if (foto.size > 10 * 1024 * 1024 || !foto.name.endsWith('.jpg')) {
 
          
 
-          <button onclick="window.location.href='MAPA_COORD.html'" class="btn btn-primary">
+          <button onclick="window.location.href='MAPA_COORD_2.html'" class="btn btn-primary">
   Ir al Mapa
 </button>
             <button type="button" class="btn btn-info w-100" onclick="obtenerCoordenadas()">📍 Obtener Coordenadas</button>
