--- a/MAPA_COORD_2.html
+++ b/MAPA_COORD_2.html
@@ -147,7 +147,7 @@
         // Redirigir a la página del formulario después de un breve retraso
         setTimeout(() => {
           // *** ¡IMPORTANTE! Cambia 'TU_FORMULARIO_CLIENTE.html' por el nombre real de tu archivo de formulario. ***
-          window.location.href = 'crear_cliente.html.html'; 
+          window.location.href = 'crear_cliente.html'; 
         }, 2500);
       } else {
         alert("Debes seleccionar un punto en el mapa.");
